# HiveCom-Desktop

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  compile_flags.txt
Source/: CMakeLists.txt  CertificateProvider.cpp  CertificateProvider.hpp  DesktopDataLink.cpp  DesktopDataLink.hpp  Main.cpp  MainWindow.cpp  MainWindow.hpp  ReflectionDataLink.cpp  ReflectionDataLink.hpp
Source/Resources/: Resource.qrc
Source/UI/: MainWindow.ui
